added categories section in the homepage

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,8 @@
   justify-content: center;
   display: flex;
 }
+.custom-slide {
+  width: 300px !important; /* Your desired width */
+  flex-shrink: 0; /* Prevent shrinking */
+}
+
